feat: Added feature to select favorite recipes
- Added widget preview image
- Included a heart shaped button in details activity to toggle favorite recipes
- Favorite recipes are displayed in the favorites tab and stored
in SharedPreferences

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,7 @@
     <string name="appwidget_text">EXAMPLE</string>
     <string name="add_widget">Add widget</string>
 
+    <string name="widget_name">FavoriteRecipe</string>
+
     <string name="widget_updated_toast_message">Recipe added to the Widget! :-)</string>
 </resources>
