feat: Added widget with ingredients list
- The app now handles when the user has no internet connection
- User can toggle the recipe selected for the widget. If the widget
is empty, it will display a nice message and UI
- Recipes data is now fetched when the app is restarted
- Removed hard coded strings
- Recipes are now retained on scroll on the main recipes list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,20 @@
     <string name="appwidget_text">EXAMPLE</string>
     <string name="add_widget">Add widget</string>
 
+    <!--Widget-->
     <string name="widget_name">FavoriteRecipe</string>
+    <string name="widget_updated_toast_message">Widget Updated :-)</string>
 
-    <string name="widget_updated_toast_message">Recipe added to the Widget! :-)</string>
+    <!--Favorites fragment-->
+    <string name="no_favorites_selected_message">No Favorite Recipes Selected</string>
+
+    <!--Connection message-->
+    <string name="no_connection_message">Ready to bake some recipes?</string>
+
+    <!--Dialogs-->
+    <string name="connection_dialog_title">No Internet Connection</string>
+    <string name="connection_dialog_message">Please reconnect to bake these delicious recipes : )</string>
+    <string name="ok">OK</string>
 </resources>
+
+
