feat: Improved tablet layout and widget
- Removed hard coded strings in XML
- Improved classes comments and documentation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <!--Widget-->
     <string name="widget_name">FavoriteRecipe</string>
     <string name="widget_updated_toast_message">Widget Updated :-)</string>
+    <string name="widget_empty_message">Choose a Recipe</string>
+    <string name="widget_empty_ingredients_message">Ready to bake some delicious desserts?</string>
 
     <!--Favorites fragment-->
     <string name="no_favorites_selected_message">No Favorite Recipes Selected</string>
