feat: Added main tests for tablet and added tests for phone
- Fixed bug causing details activity to crash on tablet when the
device was rotates and a list item was clicked

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,14 @@
     <string name="connection_dialog_title">No Internet Connection</string>
     <string name="connection_dialog_message">Please reconnect to bake these delicious recipes : )</string>
     <string name="ok">OK</string>
+
+    <!--Menu-->
+    <string name="menu_add_to_widget">Add to Widget</string>
+    <string name="menu_favorite">Favorite</string>
+
+    <!--Toasts-->
+    <string name="removed_from_favorites_message">Removed From Favorites</string>
+    <string name="added_to_favorites_message">Added to Favorites :)</string>
 </resources>
 
 
